--- a/configs/dev.yaml
+++ b/configs/dev.yaml
@@ -2,4 +2,4 @@ server:
   port: "8080"
 
 database:
-  url: "postgres://postgres:password@localhost:5432/url_shortener?sslmode=disable"
+  url: "postgres://postgres:123456@localhost:5432/url_shortener?sslmode=disable"
