--- a/configs/dev.yaml
+++ b/configs/dev.yaml
@@ -3,3 +3,7 @@ server:
 
 database:
   url: "postgres://postgres:123456@localhost:5432/url_shortener?sslmode=disable"
+
+jwt:
+  secret: "your-super-secret-jwt-key-change-this-in-production"
+  expiration: "24h"
