refactor: Migrate configuration from YAML to environment variables and standardize API responses with new utility functions.

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,11 @@
 SERVER_PORT=
 
 # Database Configuration
+# Format: postgres://username:password@host:port/database?sslmode=disable
 DATABASE_URL=
 
 # JWT Configuration
 JWT_SECRET=
+
+# Duration format: e.g., 24h, 30m, 168h (7 days)
 JWT_EXPIRATION=
