--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,34 @@
-version: '3.8'
 
 services:
-  postgres:
-    image: postgres:16-alpine
-    container_name: url_shortener_db
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: url_shortener
+  api:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: phatle113/url-shortener:latest
+    container_name: url-shortener
     ports:
-      - "5432:5432"
+      - "${SERVER_PORT:-8080}:8080"
+    environment:
+      - SERVER_PORT=8080
+      - DATABASE_URL=postgres://${DB_USER:-postgres}:${DB_PASSWORD:-123}@db:5432/${DB_NAME:-mydb}?sslmode=disable
+      - JWT_SECRET=${JWT_SECRET:-secret}
+      - JWT_EXPIRATION=${JWT_EXPIRATION:-24h}
+    depends_on:
+      - db
+    restart: unless-stopped
+
+  db:
+    image: postgres:15-alpine
+    container_name: url-shortener-db
+    environment:
+      POSTGRES_USER: ${DB_USER:-postgres}
+      POSTGRES_PASSWORD: ${DB_PASSWORD:-123}
+      POSTGRES_DB: ${DB_NAME:-mydb}
     volumes:
-      - postgres_data:/var/lib/postgresql/data
-      - ./migrations:/migrations
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      - pgdata:/var/lib/postgresql/data
+    ports:
+      - "${DB_PORT:-5432}:5432"
+    restart: unless-stopped
 
 volumes:
-  postgres_data:
+  pgdata:
